# spin_images

./: .gitignore  README.md  generate_spin_images.py  model_inference.py  train_model.py
cpp/: CMakeLists.txt  main.cpp  random_pc.pcd
pcl-env/: pip-selfcheck.json
pcl-env/local/: bin  include  lib
src/: spin_image.py
